--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
         compose true
     }
 
+    composeOptions {
+        kotlinCompilerExtensionVersion "0.1.0-dev04"
+    }
+
 }
 
 dependencies {
@@ -41,11 +45,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.ui:ui-framework:0.1.0-dev03'
-    implementation 'androidx.ui:ui-layout:0.1.0-dev03'
-    implementation 'androidx.ui:ui-material:0.1.0-dev03'
-    implementation 'androidx.ui:ui-foundation:0.1.0-dev03'
-    implementation 'androidx.ui:ui-tooling:0.1.0-dev03'
+    implementation 'androidx.ui:ui-framework:0.1.0-dev04'
+    implementation 'androidx.ui:ui-layout:0.1.0-dev04'
+    implementation 'androidx.ui:ui-material:0.1.0-dev04'
+    implementation 'androidx.ui:ui-foundation:0.1.0-dev04'
+    implementation 'androidx.ui:ui-tooling:0.1.0-dev04'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
 
 
