--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Dec 21 19:06:53 PST 2019
+#Sat Mar 28 14:30:13 PDT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.1-rc-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-rc-1-all.zip
